# UsefulSerenity

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  publisher.yml
src/: lib.rs  mongoutil.rs  serenityutil.rs
