[package]
name = "useful-serenity"
version = "0.1.4"
description = "Useful Serenity tools"
repository = "https://github.com/misilelab/UsefulSerenity"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.2.0"
serde = "1.0"
poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
